tests/invalid/For_Invalid_8.whiley
method f():
    int r = 0
    //
    for i in 0..5 where r >= 1:
        r = r + i
